src/objects/Amount_Debited_to_Newsvendor__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Amount__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit_Note_No__c</fullName>
        <label>Debit Note No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_Period__c</fullName>
        <label>Debit Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Name__c</fullName>
        <label>Vendor Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Amount Debited to Newsvendor</label>
    <nameField>
        <label>Amount Debited to Newsvendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amount Debited to Newsvendor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>